# aiBrowser

./: .gitignore  README.md  pyproject.toml
ai_browser/: __init__.py  _form_helpers.py  _scope.py  cli.py
ai_browser/agent_explorer/: __init__.py  explorer.py  models.py
ai_browser/browser_session/: __init__.py  models.py  session.py
ai_browser/crawler/: __init__.py  crawler.py  models.py
ai_browser/login_handler/: __init__.py  handler.py  models.py
ai_browser/registration_handler/: __init__.py  handler.py  models.py
tests/: test_confirmation.py  test_crawler_scope.py  test_crypto.py  test_denylist.py  test_email_handling.py  test_llm_providers.py  test_login.py  test_registration_delegation.py  test_scope.py  test_scope_guard.py  test_selector_escape.py
