[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai_browser"
version = "0.1.0"
description = "Automated web browsing module for bug bounty reconnaissance via Burp Suite proxy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.45",
    "pydantic>=2.0",
    "aiohttp>=3.9",
    "aioimaplib>=1.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "click>=8.1",
    "typing-extensions>=4.10",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["ai_browser"]

[project.scripts]
ai-browser = "ai_browser.cli:main"
